@@ -224,7 +224,7 @@ bool baseViewEvent::mousePressEvent(medAbstractView * view, QMouseEvent *mouseEv
             globalVtkLeftButtonBehaviour = view2d->GetLeftButtonInteractionStyle();
             view2d->SetLeftButtonInteractionStyle(vtkInteractorStyleImageView2D::InteractionTypeNull);
         }
-        else if (mouseEvent->modifiers() == Qt::ShiftModifier)
+        else if (mouseEvent->modifiers() == Qt::NoModifier)
         {
             for (polygonLabel *label : labelList)
             {
@@ -236,20 +236,6 @@ bool baseViewEvent::mousePressEvent(medAbstractView * view, QMouseEvent *mouseEv
                 }
             }
             leftButtonBehaviour(view);
-        }
-        else if (mouseEvent->modifiers()==Qt::NoModifier)
-        {
-            if (!isRepulsorActivated )
-            {
-                vtkImageView2D *view2d = static_cast<medVtkViewBackend*>(currentView->backend())->view2D;
-                int currentLeftButtonBehaviour = view2d->GetLeftButtonInteractionStyle();
-                if (currentLeftButtonBehaviour != globalVtkLeftButtonBehaviour &&
-                currentLeftButtonBehaviour != vtkInteractorStyleImageView2D::InteractionTypeNull)
-                {
-                    globalVtkLeftButtonBehaviour = currentLeftButtonBehaviour;
-                }
-                view2d->SetLeftButtonInteractionStyle(globalVtkLeftButtonBehaviour);
-            }
         }
     }
     else if (mouseEvent->button()==Qt::RightButton)
@@ -409,7 +395,6 @@ void baseViewEvent::setLabelActivationState()
         manager->setRoisSelectedState();
     }
 }
-
 
 bool baseViewEvent::rightButtonBehaviour(medAbstractView *view, QMouseEvent *mouseEvent)
 {
@@ -706,7 +691,6 @@ void baseViewEvent::activateRepulsor(bool state)
         cursorState = CURSORSTATE::CS_DEFAULT;
         vtkInteractorStyleImageView2D *interactorStyle2D = vtkInteractorStyleImageView2D::New();
         globalVtkLeftButtonBehaviour = view2d->GetLeftButtonInteractionStyle();
-        interactorStyle2D->SetLeftButtonInteraction(vtkInteractorStyleImageView2D::InteractionTypeNull);
         view2d->SetInteractorStyle(interactorStyle2D);
         view2d->SetupInteractor(originalInteractor);
         interactorStyle2D->Delete();
